nightly only for use of atomic integer

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: rust
 rust: nightly
+cache: cargo
 sudo: false
 
 matrix:
   include:
-    - env: FEATURES=""
-      rust: stable
-      os: linux
+    # - env: FEATURES=""
+    #   rust: stable
+    #   os: linux
     - env: FEATURES=""
       rust: nightly
       os: linux
