--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,10 @@ version = "0.0.1"
 license = "MIT"
 authors = ["uuhan <xuminhui189@gmail.com>"]
 edition = "2018"
-include = [
-  "ccat/**",
-  "src/**",
-  "examples/**",
-  "README.md",
+exclude = [
+  "/.travis.yml",
+  "src-rs/**",
+  "/wrapper.h",
 ]
 
 [build-dependencies]
