--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "cat-rs"
 description = "cat client with rust"
+keywords = ["cat", "ffi"]
+readme = "README.md"
+repository = "https://github.com/uuhan/cat-rs"
+homepage = "https://github.com/uuhan/cat-rs"
 version = "0.0.1"
 license = "MIT"
 authors = ["uuhan <xuminhui189@gmail.com>"]
