--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ keywords = ["cat", "ffi"]
 readme = "README.md"
 repository = "https://github.com/uuhan/cat-rs"
 homepage = "https://github.com/uuhan/cat-rs"
-version = "0.0.5"
+version = "0.0.5-1"
 license = "MIT"
 authors = ["uuhan <xuminhui189@gmail.com>"]
 edition = "2018"
