--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ keywords = ["cat", "ffi"]
 readme = "README.md"
 repository = "https://github.com/uuhan/cat-rs"
 homepage = "https://github.com/uuhan/cat-rs"
-version = "0.0.6-alpha.2"
+version = "0.0.6"
 license = "MIT"
 authors = ["uuhan <xuminhui189@gmail.com>"]
 edition = "2018"
@@ -25,6 +25,7 @@ log = "0.4.6"
 serde_json = "1.0.38"
 threadpool = "1.7.1"
 num_cpus = "1.10.0"
+cat-rs = { path = "." }
 
 [dependencies.serde]
 version = "1.0.88"
