--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,10 @@ libc = "^0.2.48"
 log = "^0.4.6"
 serde_json = "^1.0.38"
 num_cpus = "^1.10.0"
-nodex = "0.1.3"
 abyss-promise = "0.1.1"
+
+[dependencies.nodex]
+version = "0.1.3"
 
 [dependencies.serde]
 version = "^1.0.88"
